--- a/mate2/P1_Introduccion a Python para Matematicas.ipynb
+++ b/mate2/P1_Introduccion a Python para Matematicas.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "f_n-MERF9izJ"
    },
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -575,14 +575,12 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'math' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# EJEMPLO PARA PI\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mmath\u001b[49m\u001b[38;5;241m.\u001b[39mpi \u001b[38;5;241m==\u001b[39m np\u001b[38;5;241m.\u001b[39mpi)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(math\u001b[38;5;241m.\u001b[39mpi \u001b[38;5;241m==\u001b[39m scipy\u001b[38;5;241m.\u001b[39mpi)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(math\u001b[38;5;241m.\u001b[39mpi \u001b[38;5;241m==\u001b[39m sympy\u001b[38;5;241m.\u001b[39mpi)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'math' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n"
      ]
     }
    ],
@@ -1530,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1555,7 +1553,7 @@
        "9.0"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2052,7 +2050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -2077,7 +2075,7 @@
        "['a', 'b', 'c', 'd']"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4494,7 +4492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -4519,13 +4517,14 @@
        "0.07407407407407407"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1/((1/2)*3**3)"
+    "#1/((1/2)*3**3)\n",
+    "1/((1/2)*pow(3,3))"
    ]
   },
   {
@@ -4539,7 +4538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "executionInfo": {
      "elapsed": 695,
@@ -4569,7 +4568,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1500"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vehiculos[\"Sedan\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -4591,26 +4610,31 @@
     {
      "data": {
       "text/plain": [
-       "['SEDAN', 'SUV', 'PICKUP', 'RANCHERA', 'FURGO', 'BICICLETA', 'MOTO']"
+       "[('Sedan', 1500),\n",
+       " ('SUV', 2000),\n",
+       " ('Pickup', 2500),\n",
+       " ('Ranchera', 1600),\n",
+       " ('Furgo', 2400),\n",
+       " ('Bicicleta', 7),\n",
+       " ('Moto', 110)]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[k.upper() for k,v in vehiculos.items() if v<5000]"
+    "#[k.upper() for k,v in vehiculos.items() if v<5000]\n",
+    "\n",
+    "lis = []\n",
+    "\n",
+    "for vehiculo in vehiculos.items():\n",
+    "    if vehiculo[1] < 5000:\n",
+    "        lis.append(vehiculo)\n",
+    "\n",
+    "lis"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "l1BQZWK8PUue"
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -4624,6 +4648,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reloj(horas,minutos):\n",
+    "    if horas<=12:\n",
+    "        horas_mod=horas\n",
+    "        flag= None\n",
+    "    else:\n",
+    "        horas_mod=horas-12\n",
+    "        flag=\"*\"\n",
+    "    tupl = [horas_mod,minutos,flag]\n",
+    "    return tupl\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -4660,6 +4702,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def grad2rad(valor,operacion):\n",
+    "    if operacion==\"gra\":\n",
+    "        valor = valor*(math.pi/200)\n",
+    "    elif operacion==\"rad\":\n",
+    "        valor = valor*(200/math.pi)\n",
+    "    else:\n",
+    "        valor=\"Error\"\n",
+    "    return valor\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -4672,9 +4730,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.017453292519943295\n",
-      "57.29577951308232\n",
-      "3.141592653589793\n"
+      "63.66197723675813\n",
+      "0.015707963267948967\n",
+      "11459.155902616463\n"
      ]
     }
    ],
@@ -4692,6 +4750,13 @@
    "source": [
     "5. Escribe una clase que represente un cilindro mediante sus dimensiones (radio y altura) y que tenga como métodos el cálculo del volumen, el cálculo del área y el método que permita imprimir toda la información del cilindro al hacer print.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
