classe de mates

--- a/mate2/P1_Introduccion a Python para Matematicas.ipynb
+++ b/mate2/P1_Introduccion a Python para Matematicas.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "id": "f_n-MERF9izJ"
    },
@@ -4428,7 +4428,9 @@
     "\n",
     "\n",
     "rectangulo = Rectangulo(2, 3)\n",
-    "print(rectangulo)\n"
+    "print(rectangulo)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -4753,14 +4755,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Cilindro:\n",
+    "    def __init__(self, radio, altura):\n",
+    "        self.radio = radio\n",
+    "        self.altura = altura\n",
+    "\n",
+    "    def volumen(self):\n",
+    "        return math.pi * self.altura * self.radio * self.radio\n",
+    "    \n",
+    "    def area(self):\n",
+    "        return 2* math.pi * self.radio * self.altura\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return f\"El cilindro de radio {self.radio} y altura {self.altura} tiene el volumen {self.volumen()} tinene area {self.area()}\""
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -4773,7 +4789,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El cilindro de radio 2 y altura 4 tiene el volumen 50.26548245743669 y la superficie 75.39822368615503\n"
+      "El cilindro de radio 2 y altura 4 tiene el volumen 50.26548245743669 tinene area 50.26548245743669\n"
      ]
     }
    ],
